--- a/panels/universal-access/cc-cursor-size-dialog.ui
+++ b/panels/universal-access/cc-cursor-size-dialog.ui
@@ -2,26 +2,19 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcCursorSizeDialog" parent="GtkDialog">
-    <property name="can_focus">False</property>
-    <property name="border_width">5</property>
     <property name="title" translatable="yes">Cursor Size</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
-    <property name="type_hint">dialog</property>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
-        <property name="can_focus">False</property>
+        <property name="margin_start">12</property>
+        <property name="margin_end">12</property>
+        <property name="margin_top">12</property>
+        <property name="margin_bottom">12</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
-        <child internal-child="action_area">
-          <object class="GtkButtonBox">
-            <property name="can_focus">False</property>
-          </object>
-        </child>
+        <property name="spacing">8</property>
         <child>
           <object class="GtkLabel">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="margin_start">12</property>
             <property name="margin_end">6</property>
             <property name="margin_top">6</property>
@@ -34,8 +27,8 @@
         </child>
         <child>
           <object class="GtkGrid" id="size_grid">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="halign">center</property>
             <style>
               <class name="linked"/>
             </style>
